name:               servant-multipart
version:            0.12.1
synopsis:           multipart/form-data (e.g file upload) support for servant
description:
  This package adds server-side support of file upload to the servant ecosystem.

homepage:           https://github.com/haskell-servant/servant-multipart#readme
license:            BSD3
license-file:       LICENSE
author:             Alp Mestanogullari
maintainer:         alpmestan@gmail.com
copyright:          2016-2017 Alp Mestanogullari, 2018-2019 Servant Contributors
category:           Web, Servant
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: CHANGELOG.md
tested-with:
    GHC ==8.6.5
     || ==8.8.4
     || ==8.10.7
     || ==9.0.2
     || ==9.2.8
     || ==9.4.8
     || ==9.6.3
     || ==9.8.1

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Servant.Multipart

  -- ghc boot libs
  build-depends:
      base          >=4.7      && <5
    , bytestring 
    , directory 
    , text 

  -- other dependencies
  build-depends:
      servant-multipart-api == 0.12.*
    , lens
    , resourcet
    , servant             >=0.16     && <0.21
    , servant-server      >=0.16     && <0.21
    , string-conversions 
    , wai                 
    , wai-extra           

test-suite servant-multipart-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  build-depends:
      base
    , bytestring
    , http-types
    , servant-multipart
    , servant-server
    , string-conversions
    , tasty
    , tasty-wai
    , text

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-multipart
